// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbox button formatted should match to snapshot 1`] = `
<button
  class="active"
  ref="formatted"
  type="button"
>
  Formatted
</button>
`;

exports[`Toolbox button query should match to snapshot 1`] = `
<button
  ref="query"
  type="button"
>
  Query
</button>
`;

exports[`Toolbox button raw should match to snapshot 1`] = `
<button
  ref="raw"
  type="button"
>
  Raw
</button>
`;
